# pg

./: Cargo.toml  README.md  build.rs
proto/: test.proto
src/: gencode.rs  grpc.rs  grpc_protobuf.rs  main.rs  server.rs
src/gencode/: mod.rs  server.rs
src/grpc/: channel.rs  dynadapt.rs  intercept.rs  mod.rs  protobuf.rs  server.rs
src/grpc_protobuf/: mod.rs  server.rs
