[package]
name = "pg"
version = "0.1.0"
edition = "2024"

[features]
default = ["protobuf"] # XXX: For testing only
protobuf = ["dep:protobuf"]

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = "0.3.31"
protobuf = { version = "4.34.0-rc.1", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
tokio-util = "0.7.18"
trait-variant = "0.1.2"

[build-dependencies]
protobuf-codegen = "4.34.0-rc.1"
